[package]
name = "marzano-lsp"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
tower-lsp = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
marzano-core = { path = "../core", default-features = false, features = [
  "non_wasm",
] }
marzano-gritmodule = { path = "../gritmodule" }
grit_cache = { path = "../gritcache", optional = true }
marzano-language = { path = "../language" }
ai_builtins = { workspace = true, optional = true }
marzano-util = { path = "../util", features = ["finder"] }
anyhow = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true, features = [] }
tracing-opentelemetry = { workspace = true, features = [], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }

[features]
default = []
caching = ["dep:grit_cache"]
ai_builtins = ["dep:ai_builtins"]
project_diagnostics = ["caching"]
grit_alpha = []
# Run these features in testing
test_ci = []
grit_tracing = ["dep:tracing-opentelemetry"]
