[package]
name = "marzano_messenger"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
log = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }


marzano-core = { path = "../core", features = [
  "non_wasm",
], default-features = false }
marzano-util = { path = "../util", features = ["finder"] }
marzano-language = { path = "../language", features = ["finder"] }
