[package]
name = "marzano_messenger"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
# Do *NOT* upgrade beyond 1.0.171 until https://github.com/serde-rs/serde/issues/2538 is fixed
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.70" }
colored = { version = "2.0.4" }
dialoguer = { version = "0.10.4" }
log = { version = "0.4.19" }
indicatif = { version = "0.17.5" }
serde_json = { version = "1.0.113" }

grit-util = { path = "../grit-util" }
marzano-core = { path = "../core", features = [
  "non_wasm",
], default-features = false }
marzano-language = { path = "../language", features = ["finder"] }
