[package]
name = "grit-sdk"
description = "Rust SDK for GritQL"
edition = "2021"
publish = false
license = "MIT"
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.70" }
grit-util = { path = "../grit-util" }
marzano-core = { path = "../core", features = [], default-features = false }
marzano-language = { path = "../language", default-features = false }
marzano-util = { path = "../util" }
