[package]
name = "marzano-test-utils"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
marzano-auth = { path = "../auth" }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
fs_extra = { workspace = true }

