[package]
name = "marzano-test-utils"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70" }
marzano-auth = { path = "../auth" }
assert_cmd = { version = "2.0.12" }
tempfile = { version = "3.1" }
fs_extra = { version = "1.3" }

