[package]
name = "marzano-util"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true, optional = true }
ignore = { workspace = true, optional = true }
sha2 = { workspace = true }
derive_builder = { workspace = true }
tree-sitter-traversal = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"], optional = true }
tokio = { workspace = true, optional = true }
serde_json = { workspace = true }
futures = { workspace = true, optional = true }
http = { workspace = true }

[features]
finder = ["log", "ignore"]

network_requests_common = []
network_requests = ["dep:futures", "reqwest", "tokio", "tokio/rt", "network_requests_common"]
network_requests_external = ["network_requests_common"]

external_functions_ffi = []
