[package]
name = "marzano-wasm-bindings"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
marzano-core = { path = "../core", features = [
    "wasm_core",
], default-features = false }
marzano-language = { path = "../language", default-features = false }
marzano-util = { path = "../util" }
ai_builtins = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
web-tree-sitter-sg = { path = "../../vendor/web-tree-sitter" }
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
console_error_panic_hook = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow = "1.0.70"
serde_json = "1.0.96"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
ai_builtins = ["dep:ai_builtins"]
