[package]
name = "marzano-yaml-syntax"
description="Alternative syntax for writing patterns in YAML"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = { version = "0.9.25" }
