[package]
name = "tree-sitter-c-sharp"
description = "C# grammar for tree-sitter"
version = "0.23.1"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
    "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "c-sharp"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-c-sharp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "~1"
