[package]
name = "tree-sitter-php"
description = "PHP grammar for tree-sitter"
version = "0.22.2"
keywords = ["incremental", "parsing", "php"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-php"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
	"common",
	"bindings/rust",
	"php/grammar.js",
	"php/src",
	"php_only/grammar.js",
	"php_only/src",
	"queries",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "~1.0.83"
